tests/ui/parser/doc-comment-in-stmt.stderr
error[E0753]: expected outer doc comment
  --> $DIR/doc-comment-in-stmt.rs:5:5
   |
LL |     //!self.allow_ty_infer()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
   |
LL -     //!self.allow_ty_infer()
LL +     //self.allow_ty_infer()
   |

error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/doc-comment-in-stmt.rs:5:5
   |
LL |     //!self.allow_ty_infer()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error[E0753]: expected outer doc comment
  --> $DIR/doc-comment-in-stmt.rs:12:5
   |
LL |     /*! bar */
   |     ^^^^^^^^^^
   |
   = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
   |
LL -     /*! bar */
LL +     /* bar */
   |

error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/doc-comment-in-stmt.rs:12:5
   |
LL |     /*! bar */
   |     ^^^^^^^^^^
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `/** baz */`
  --> $DIR/doc-comment-in-stmt.rs:18:7
   |
LL |     1 /** baz */
   |       ^^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator
   |
help: add a space before the last `*` to write a regular comment
   |
LL |     1 /* * baz */
   |         +

error: expected one of `.`, `;`, `?`, `}`, or an operator, found doc comment `/// quux`
  --> $DIR/doc-comment-in-stmt.rs:23:7
   |
LL |     2 /// quux
   |       ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator
   |
help: add a space before the last `/` to write a regular comment
   |
LL |     2 // / quux
   |         +

error: expected one of `.`, `;`, `?`, `else`, or an operator, found doc comment `//!foo`
  --> $DIR/doc-comment-in-stmt.rs:29:22
   |
LL |     let y = x.max(1) //!foo
   |                      ^^^^^^ expected one of `.`, `;`, `?`, `else`, or an operator
   |
help: add a space before `!` to write a regular comment
   |
LL |     let y = x.max(1) // !foo
   |                        +

error[E0308]: mismatched types
  --> $DIR/doc-comment-in-stmt.rs:3:13
   |
LL |   fn foo() -> bool {
   |      ---      ^^^^ expected `bool`, found `()`
   |      |
   |      implicitly returns `()` as its body has no tail or `return` expression
LL |       false
   |  __________-
LL | |     //!self.allow_ty_infer()
   | |____- help: remove this semicolon to return this value

error[E0308]: mismatched types
  --> $DIR/doc-comment-in-stmt.rs:10:13
   |
LL |   fn bar() -> bool {
   |      ---      ^^^^ expected `bool`, found `()`
   |      |
   |      implicitly returns `()` as its body has no tail or `return` expression
LL |       false
   |  __________-
LL | |     /*! bar */
   | |____- help: remove this semicolon to return this value

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0308, E0585, E0753.
For more information about an error, try `rustc --explain E0308`.
